--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -50,6 +50,10 @@
       terminal.controller.add("default","Program","Play/Pause",() => { terminal.pause(); },"Space")
       terminal.controller.add("default","Program","Incr. Speed",() => { terminal.modSpeed(1); },">")
       terminal.controller.add("default","Program","Decr. Speed",() => { terminal.modSpeed(-1); },"<")
+      terminal.controller.add("default","Program","Incr. Width",() => { terminal.modSize(1,0); },"CmdOrCtrl+]")
+      terminal.controller.add("default","Program","Decr. Width",() => { terminal.modSize(-1,0); },"CmdOrCtrl+[")
+      terminal.controller.add("default","Program","Incr. Height",() => { terminal.modSize(0,1); },"CmdOrCtrl+}")
+      terminal.controller.add("default","Program","Decr. Height",() => { terminal.modSize(0,-1); },"CmdOrCtrl+{")
       terminal.controller.add("default","Program","Incr. Col",() => { terminal.modGrid(1,0); },"]")
       terminal.controller.add("default","Program","Decr. Col",() => { terminal.modGrid(-1,0); },"[")
       terminal.controller.add("default","Program","Incr. Row",() => { terminal.modGrid(0,1); },"}")
