--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -56,6 +56,7 @@
       terminal.controller.add("default","View","Zoom Out",() => { terminal.modZoom(-0.25); },"CmdOrCtrl+-")
       terminal.controller.add("default","View","Zoom Reset",() => { terminal.modZoom(1,true); },"CmdOrCtrl+0")
       terminal.controller.add("default","View","Toggle Interface",() => { terminal.toggleInterface(); },"Tab")
+      terminal.controller.add("default","View","Toggle Background",() => { terminal.toggleBackground(); },"`")
 
       terminal.controller.add("default","Theme","Open Theme",() => { terminal.theme.open(); },"CmdOrCtrl+Shift+o")
       terminal.controller.add("default","Theme","Reset Theme",() => { terminal.theme.reset(); },"CmdOrCtrl+Shift+Backspace")
