--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -19,49 +19,48 @@
 
       terminal.install(document.body)
 
-      terminal.controller.add("default","*","About",() => { require('electron').shell.openExternal('https://github.com/hundredrabbits/Orca'); },"CmdOrCtrl+,")
-      terminal.controller.add("default","*","Fullscreen",() => { app.toggleFullscreen(); },"CmdOrCtrl+Enter")
-      terminal.controller.add("default","*","Hide",() => { app.toggleVisible(); },"CmdOrCtrl+H")
-      terminal.controller.add("default","*","Inspect",() => { app.inspect(); },"CmdOrCtrl+.")
-      terminal.controller.add("default","*","Reset",() => { terminal.reset(); },"CmdOrCtrl+Backspace")
-      terminal.controller.add("default","*","Quit",() => { app.exit(); },"CmdOrCtrl+Q")
+      terminal.controller.add("default","*","About",() => { require('electron').shell.openExternal('https://github.com/hundredrabbits/Orca') },"CmdOrCtrl+,")
+      terminal.controller.add("default","*","Fullscreen",() => { app.toggleFullscreen() },"CmdOrCtrl+Enter")
+      terminal.controller.add("default","*","Hide",() => { app.toggleVisible() },"CmdOrCtrl+H")
+      terminal.controller.add("default","*","Inspect",() => { app.inspect() },"CmdOrCtrl+.")
+      terminal.controller.add("default","*","Reset",() => { terminal.reset() },"CmdOrCtrl+Backspace")
+      terminal.controller.add("default","*","Quit",() => { app.exit() },"CmdOrCtrl+Q")
 
-      terminal.controller.add("default","File","New",() => { terminal.source.new(); },"CmdOrCtrl+N")
-      terminal.controller.add("default","File","Save",() => { terminal.source.save(); },"CmdOrCtrl+S")
-      terminal.controller.add("default","File","Save As",() => { terminal.source.save(true); },"CmdOrCtrl+Shift+S")
-      terminal.controller.add("default","File","Open",() => { terminal.source.open(); },"CmdOrCtrl+O")
-      terminal.controller.add("default","File","Revert",() => { terminal.source.revert(); },"CmdOrCtrl+Shift+R")
+      terminal.controller.add("default","File","New",() => { terminal.source.new() },"CmdOrCtrl+N")
+      terminal.controller.add("default","File","Save",() => { terminal.source.save() },"CmdOrCtrl+S")
+      terminal.controller.add("default","File","Save As",() => { terminal.source.save(true) },"CmdOrCtrl+Shift+S")
+      terminal.controller.add("default","File","Open",() => { terminal.source.open() },"CmdOrCtrl+O")
+      terminal.controller.add("default","File","Revert",() => { terminal.source.revert() },"CmdOrCtrl+Shift+R")
 
-      terminal.controller.add("default","Edit","Select All",() => { terminal.cursor.selectAll(); },"CmdOrCtrl+A")
-      terminal.controller.add("default","Edit","Erase Selection",() => { terminal.cursor.erase(); },"Backspace")
-      terminal.controller.add("default","Edit","Copy Selection",() => { terminal.cursor.copy(); },"CmdOrCtrl+C")
-      terminal.controller.add("default","Edit","Cut Selection",() => { terminal.cursor.cut(); },"CmdOrCtrl+X")
-      terminal.controller.add("default","Edit","Paste Selection",() => { terminal.cursor.paste(); },"CmdOrCtrl+V")
-      terminal.controller.add("default","Edit","Undo",() => { terminal.history.undo(); },"CmdOrCtrl+Z")
-      terminal.controller.add("default","Edit","Redo",() => { terminal.history.redo(); },"CmdOrCtrl+Shift+Z")
+      terminal.controller.add("default","Edit","Select All",() => { terminal.cursor.selectAll() },"CmdOrCtrl+A")
+      terminal.controller.add("default","Edit","Erase Selection",() => { terminal.cursor.erase() },"Backspace")
+      terminal.controller.add("default","Edit","Copy Selection",() => { terminal.cursor.copy() },"CmdOrCtrl+C")
+      terminal.controller.add("default","Edit","Cut Selection",() => { terminal.cursor.cut() },"CmdOrCtrl+X")
+      terminal.controller.add("default","Edit","Paste Selection",() => { terminal.cursor.paste() },"CmdOrCtrl+V")
+      terminal.controller.add("default","Edit","Undo",() => { terminal.history.undo() },"CmdOrCtrl+Z")
+      terminal.controller.add("default","Edit","Redo",() => { terminal.history.redo() },"CmdOrCtrl+Shift+Z")
 
-      terminal.controller.add("default","Program","Play/Pause",() => { terminal.pause(); },"Space")
-      terminal.controller.add("default","Program","Reset Frame",() => { terminal.orca.f = 0; },"CmdOrCtrl+Shift+N")
-      terminal.controller.add("default","Program","Incr. Speed",() => { terminal.modSpeed(1); },">")
-      terminal.controller.add("default","Program","Decr. Speed",() => { terminal.modSpeed(-1); },"<")
-      terminal.controller.add("default","Program","Incr. Col",() => { terminal.modGrid(1,0); },"]")
-      terminal.controller.add("default","Program","Decr. Col",() => { terminal.modGrid(-1,0); },"[")
-      terminal.controller.add("default","Program","Incr. Row",() => { terminal.modGrid(0,1); },"}")
-      terminal.controller.add("default","Program","Decr. Row",() => { terminal.modGrid(0,-1); },"{")
-      terminal.controller.add("default", "Program", "Next clock", () => {terminal.nextClock()}, "Ctrl+Space")
+      terminal.controller.add("default","Program","Play/Pause",() => { terminal.pause() },"Space")
+      terminal.controller.add("default","Program","Reset Frame",() => { terminal.orca.f = 0 },"CmdOrCtrl+Shift+N")
+      terminal.controller.add("default","Program","Incr. Speed",() => { terminal.modSpeed(1) },">")
+      terminal.controller.add("default","Program","Decr. Speed",() => { terminal.modSpeed(-1) },"<")
+      terminal.controller.add("default","Program","Incr. Col",() => { terminal.modGrid(1,0) },"]")
+      terminal.controller.add("default","Program","Decr. Col",() => { terminal.modGrid(-1,0) },"[")
+      terminal.controller.add("default","Program","Incr. Row",() => { terminal.modGrid(0,1) },"}")
+      terminal.controller.add("default","Program","Decr. Row",() => { terminal.modGrid(0,-1) },"{")
+      terminal.controller.add("default", "Program", "Next Clock", () => { terminal.nextClock() }, "Ctrl+Space")
 
+      terminal.controller.add("default","View","Zoom In",() => { terminal.modZoom(0.25) },"CmdOrCtrl+=")
+      terminal.controller.add("default","View","Zoom Out",() => { terminal.modZoom(-0.25) },"CmdOrCtrl+-")
+      terminal.controller.add("default","View","Zoom Reset",() => { terminal.modZoom(1,true) },"CmdOrCtrl+0")
 
-      terminal.controller.add("default","View","Zoom In",() => { terminal.modZoom(0.25); },"CmdOrCtrl+=")
-      terminal.controller.add("default","View","Zoom Out",() => { terminal.modZoom(-0.25); },"CmdOrCtrl+-")
-      terminal.controller.add("default","View","Zoom Reset",() => { terminal.modZoom(1,true); },"CmdOrCtrl+0")
+      terminal.controller.add("default","OSC Port","Default",() => { terminal.io.osc.select(49162) })
+      terminal.controller.add("default","OSC Port","TidalCycles",() => { terminal.io.osc.select(6010) })
+      terminal.controller.add("default","OSC Port","SonicPi",() => { terminal.io.osc.select(4559) })
 
-      terminal.controller.add("default","OSC Port","Default",() => { terminal.io.osc.select(49162); })
-      terminal.controller.add("default","OSC Port","TidalCycles",() => { terminal.io.osc.select(6010); })
-      terminal.controller.add("default","OSC Port","SonicPi",() => { terminal.io.osc.select(4559); })
-
-      terminal.controller.add("default","Theme","Open Theme",() => { terminal.theme.open(); },"CmdOrCtrl+Shift+O")
-      terminal.controller.add("default","Theme","Reset Theme",() => { terminal.theme.reset(); },"CmdOrCtrl+Shift+Backspace")
-      terminal.controller.add("default","Theme","Download Themes..",() => { require('electron').shell.openExternal('https://github.com/hundredrabbits/Themes'); })
+      terminal.controller.add("default","Theme","Open Theme",() => { terminal.theme.open() },"CmdOrCtrl+Shift+O")
+      terminal.controller.add("default","Theme","Reset Theme",() => { terminal.theme.reset() },"CmdOrCtrl+Shift+Backspace")
+      terminal.controller.add("default","Theme","Download Themes..",() => { require('electron').shell.openExternal('https://github.com/hundredrabbits/Themes') })
 
       terminal.controller.commit()
       terminal.start()
