--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -53,6 +53,7 @@
       terminal.controller.add("default","View","Zoom In",() => { terminal.modZoom(0.25) },"CmdOrCtrl+=")
       terminal.controller.add("default","View","Zoom Out",() => { terminal.modZoom(-0.25) },"CmdOrCtrl+-")
       terminal.controller.add("default","View","Zoom Reset",() => { terminal.modZoom(1,true) },"CmdOrCtrl+0")
+      terminal.controller.add("default","View","Toggle Retina",() => { terminal.toggleRetina() },"`")
 
       terminal.controller.add("default","OSC Port","Default",() => { terminal.io.osc.select(49162) })
       terminal.controller.add("default","OSC Port","TidalCycles",() => { terminal.io.osc.select(6010) })
