--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -48,19 +48,16 @@
       terminal.controller.add("default","Program","Decr. Col",() => { terminal.modGrid(-1,0) },"[")
       terminal.controller.add("default","Program","Incr. Row",() => { terminal.modGrid(0,1) },"}")
       terminal.controller.add("default","Program","Decr. Row",() => { terminal.modGrid(0,-1) },"{")
-      terminal.controller.add("default", "Program", "Next Clock", () => { terminal.nextClock() }, "Ctrl+Space")
+      terminal.controller.add("default","Program", "Next Clock", () => { terminal.nextClock() }, "Ctrl+Space")
 
       terminal.controller.add("default","View","Zoom In",() => { terminal.modZoom(0.25) },"CmdOrCtrl+=")
       terminal.controller.add("default","View","Zoom Out",() => { terminal.modZoom(-0.25) },"CmdOrCtrl+-")
       terminal.controller.add("default","View","Zoom Reset",() => { terminal.modZoom(1,true) },"CmdOrCtrl+0")
       terminal.controller.add("default","View","Toggle Retina",() => { terminal.toggleRetina() },"`")
 
-      terminal.controller.add("default","OSC Port","Default",() => { terminal.io.osc.select(49162) })
-      terminal.controller.add("default","OSC Port","TidalCycles",() => { terminal.io.osc.select(6010) })
-      terminal.controller.add("default","OSC Port","SonicPi",() => { terminal.io.osc.select(4559) })
-
-      terminal.controller.add("default","UDP Port","Orca Output — 49160",() => { terminal.io.udp.select(49160) })
-      terminal.controller.add("default","UDP Port","Orca Input — 49161",() => { terminal.io.udp.select(49161) })
+      terminal.controller.add("default","Midi","Default")
+      terminal.controller.add("default","UDP","Default")
+      terminal.controller.add("default","OSC","Default")
 
       terminal.controller.add("default","Theme","Open Theme",() => { terminal.theme.open() },"CmdOrCtrl+Shift+O")
       terminal.controller.add("default","Theme","Reset Theme",() => { terminal.theme.reset() },"CmdOrCtrl+Shift+Backspace")
