--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -30,7 +30,8 @@
       terminal.controller.add("default","File","Save",() => { terminal.source.save() },"CmdOrCtrl+S")
       terminal.controller.add("default","File","Save As",() => { terminal.source.saveAs() },"CmdOrCtrl+Shift+S")
       terminal.controller.add("default","File","Open",() => { terminal.source.open() },"CmdOrCtrl+O")
-      terminal.controller.add("default","File","Revert",() => { terminal.source.revert() },"CmdOrCtrl+Shift+R")
+      terminal.controller.add("default","File","Resume",() => { terminal.source.resume() })
+      terminal.controller.add("default","File","Revert",() => { terminal.source.revert() })
 
       terminal.controller.add("default","Edit","Select All",() => { terminal.cursor.selectAll() },"CmdOrCtrl+A")
       terminal.controller.add("default","Edit","Erase Selection",() => { terminal.cursor.erase() },"Backspace")
