--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -24,7 +24,7 @@
       terminal.controller.add("default","*","Hide",() => { app.toggleVisible() },"CmdOrCtrl+H")
       terminal.controller.add("default","*","Inspect",() => { app.inspect() },"CmdOrCtrl+.")
       terminal.controller.add("default","*","Reset",() => { terminal.reset() },"CmdOrCtrl+Backspace")
-      terminal.controller.add("default","*","Quit",() => { app.exit() },"CmdOrCtrl+Q")
+      terminal.controller.add("default","*","Quit",() => { terminal.unload(); app.exit() },"CmdOrCtrl+Q")
 
       terminal.controller.add("default","File","New",() => { terminal.source.new() },"CmdOrCtrl+N")
       terminal.controller.add("default","File","Save",() => { terminal.source.save() },"CmdOrCtrl+S")
