Wait for resources to be done loading..

--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -70,7 +70,7 @@
 
       terminal.controller.commit()
 
-      terminal.start()
+      window.addEventListener('load', () => { terminal.start(); })
 
       </script>
   </body>
