--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -29,16 +29,18 @@
       terminal.controller.add("default","File","Resume",() => { terminal.source.resume() })
       terminal.controller.add("default","File","Revert",() => { terminal.source.revert() })
 
+      terminal.controller.add("default","Edit","Toggle Insert Mode",() => { terminal.cursor.toggleMode(1) },"CmdOrCtrl+I")
+      terminal.controller.add("default","Edit","Block Comment",() => { terminal.cursor.comment() },"CmdOrCtrl+/")
+      terminal.controller.add("default","Edit","Goto",() => { terminal.commander.start('goto:') },"/")
+      terminal.controller.addSpacer('default', 'Edit', 'history')
+      terminal.controller.add("default","Edit","Undo",() => { terminal.history.undo() },"CmdOrCtrl+Z")
+      terminal.controller.add("default","Edit","Redo",() => { terminal.history.redo() },"CmdOrCtrl+Shift+Z")
+      terminal.controller.addSpacer('default', 'Edit', 'selection')
       terminal.controller.add("default","Edit","Select All",() => { terminal.cursor.selectAll() },"CmdOrCtrl+A")
       terminal.controller.add("default","Edit","Erase Selection",() => { terminal.cursor.erase() },"Backspace")
       terminal.controller.add("default","Edit","Copy Selection",() => { terminal.cursor.copy() },"CmdOrCtrl+C")
       terminal.controller.add("default","Edit","Cut Selection",() => { terminal.cursor.cut() },"CmdOrCtrl+X")
       terminal.controller.add("default","Edit","Paste Selection",() => { terminal.cursor.paste() },"CmdOrCtrl+V")
-      terminal.controller.add("default","Edit","Toggle Insert Mode",() => { terminal.cursor.toggleMode(1) },"CmdOrCtrl+I")
-      terminal.controller.add("default","Edit","Block Comment",() => { terminal.cursor.comment() },"CmdOrCtrl+/")
-      terminal.controller.add("default","Edit","Goto",() => { terminal.commander.start('goto:') },"/")
-      terminal.controller.add("default","Edit","Undo",() => { terminal.history.undo() },"CmdOrCtrl+Z")
-      terminal.controller.add("default","Edit","Redo",() => { terminal.history.redo() },"CmdOrCtrl+Shift+Z")
 
       terminal.controller.add("default","Program","Incr. Col",() => { terminal.modGrid(1,0) },"]")
       terminal.controller.add("default","Program","Decr. Col",() => { terminal.modGrid(-1,0) },"[")
@@ -46,6 +48,7 @@
       terminal.controller.add("default","Program","Decr. Row",() => { terminal.modGrid(0,-1) },"{")
 
       terminal.controller.add("default","Clock","Play/Pause",() => { terminal.clock.togglePlay() },"Space")
+      terminal.controller.add("default","Clock","Frame By Frame",() => { terminal.clock.touch() },"CmdOrCtrl+F")
       terminal.controller.add("default","Clock","Reset Frame",() => { terminal.clock.resetFrame() },"CmdOrCtrl+Shift+N")
       terminal.controller.add("default","Clock","Incr. Speed",() => { terminal.clock.mod(1) },">")
       terminal.controller.add("default","Clock","Decr. Speed",() => { terminal.clock.mod(-1) },"<")
