--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -27,7 +27,7 @@
       terminal.controller.add("default","File","Save As",() => { terminal.source.saveAs() },"CmdOrCtrl+Shift+S")
       terminal.controller.add("default","File","Open",() => { terminal.source.open() },"CmdOrCtrl+O")
       terminal.controller.add("default","File","Resume",() => { terminal.source.resume() })
-      terminal.controller.add("default","File","Revert",() => { terminal.source.revert() })
+      terminal.controller.add("default","File","Revert",() => { terminal.source.revert() },"CmdOrCtrl+W")
 
       terminal.controller.add("default","Edit","Toggle Insert Mode",() => { terminal.cursor.toggleMode(1) },"CmdOrCtrl+I")
       terminal.controller.add("default","Edit","Block Comment",() => { terminal.cursor.comment() },"CmdOrCtrl+/")
