Fixed issue with trigger

--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -32,7 +32,7 @@
       terminal.controller.add("default","Edit","Toggle Insert Mode",() => { terminal.cursor.toggleMode(1) },"CmdOrCtrl+I")
       terminal.controller.add("default","Edit","Block Comment",() => { terminal.cursor.comment() },"CmdOrCtrl+/")
       terminal.controller.add("default","Edit","Goto",() => { terminal.commander.start('goto:') },"/")
-      terminal.controller.add("default","Edit","Trigger Operator",() => { terminal.cursor.trigger() },"Shift+Enter")
+      terminal.controller.add("default","Edit","Trigger Operator",() => { terminal.cursor.trigger() },"CmdOrCtrl+B")
       terminal.controller.addSpacer('default', 'Edit', 'history')
       terminal.controller.add("default","Edit","Undo",() => { terminal.history.undo() },"CmdOrCtrl+Z")
       terminal.controller.add("default","Edit","Redo",() => { terminal.history.redo() },"CmdOrCtrl+Shift+Z")
