add background image udp command

--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -4,9 +4,11 @@
     <link rel="stylesheet" type="text/css" href="links/fonts.css"/>
     <link rel="stylesheet" type="text/css" href="links/main.css"/>
     <link rel="stylesheet" type="text/css" href="links/theme.css"/>
+    <link rel="stylesheet" type="text/css" href="links/video.css"/>
     <title>Orca</title>
   </head>
   <body>
+    <video id="v" src="video.mp4" autoplay muted loop></video>
     <script>
       const app = require('electron').remote.app
       const Terminal = require('./scripts/terminal')
