--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -34,6 +34,7 @@ terminal.controller.add("default","File","Revert",() => { terminal.source.revert
 terminal.controller.add("default","Edit","Toggle Insert Mode",() => { terminal.cursor.toggleMode(1) },"CmdOrCtrl+I")
 terminal.controller.add("default","Edit","Block Comment",() => { terminal.cursor.comment() },"CmdOrCtrl+/")
 terminal.controller.add("default","Edit","Find",() => { terminal.commander.start('find:') },"/")
+terminal.controller.add("default","Edit","Inject",() => { terminal.commander.start('inject:') },"CmdOrCtrl+J")
 terminal.controller.add("default","Edit","Trigger Operator",() => { terminal.cursor.trigger() },"CmdOrCtrl+B")
 terminal.controller.addSpacer('default', 'Edit', 'selection')
 terminal.controller.add("default","Edit","Select All",() => { terminal.cursor.selectAll() },"CmdOrCtrl+A")
