--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -1,9 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="links/reset.css"/>
-    <link rel="stylesheet" type="text/css" href="links/fonts.css"/>
-    <link rel="stylesheet" type="text/css" href="links/main.css"/>
-    <link rel="stylesheet" type="text/css" href="links/theme.css"/>
+    <link rel="stylesheet" type="text/css" href="links/style.css"/>
     <title>Orca</title>
   </head>
   <body>
