--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
   	<script type="module" src="browser/mock/require.js"></script>
     <script type="module">
-      import Terminal from "desktop/sources/scripts/terminal.js";
+      import Terminal from "./desktop/sources/scripts/terminal.js";
       const terminal = new Terminal()
       window.terminal = terminal
       terminal.install(document.body)
